--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "free-nextjs-admin-dashboard",
+  "name": "CrewLink",
   "version": "1.3.5",
   "private": true,
   "scripts": {
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.21.5",
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
+    "moment": "^2.30.1",
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
